--- a/html/04_비밀번호실습.html
+++ b/html/04_비밀번호실습.html
@@ -16,6 +16,7 @@
         const 비번확인 = document.getElementById("inputPw2");
 
         function 비밀번호확인() {
+            //input과 같은 창에 작성된 내용은 모두 value라는 이름으로 담겨짐
             const pw = 비번입력.value;
             const pw2 = 비번확인.value;
 
