javascript document start

--- a/html/01_JS개요.html
+++ b/html/01_JS개요.html
@@ -23,8 +23,8 @@
 
     <h1>javascript 코드 작성 방법</h1>
     <ol>
-        <li>브라우저 개발자 도구 (F12) -> consol에 직접 작성</li>
-            <small> * consol : 웹 화면에서 보면서 코딩을 작성하는 공간</small>
+        <li>브라우저 개발자 도구 (F12) -> console에 직접 작성</li>
+            <small> * console : 웹 화면에서 보면서 코딩을 작성하는 공간</small>
         
         <li>HTML 내부에 script 태그를 이용해서 작성<br>
             <button onclick="알림창보이기()">내부에 스크립트 작성</button>
@@ -43,9 +43,9 @@
 
                 javascript에서 기능(펑션)을 작성할 때
                 function 동작이름(){
-                    alert, consol.log을 이용해서 표현
+                    alert, console.log을 이용해서 표현
 
-                    consol.log = 소비자는 보이지 않지만 개발자에게는 보이는 출력문
+                    console.log = 소비자는 보이지 않지만 개발자에게는 보이는 출력문
                     alert = 소비자에게 보이는 출력문
                 }
                 
