--- a/html/02_변수와 자료형.html
+++ b/html/02_변수와 자료형.html
@@ -49,7 +49,7 @@
         const nickName = "네모";
         //const nickName = "마름모"; -> 문제가 생김
         //나중에 사용할 때 에러 뜸
-        //consol과 같은 곳에서 사용할 때 문제가 발생
+        //console과 같은 곳에서 사용할 때 문제가 발생
     </script>
     <h3>자바스크립트의 자료형</h3>
     <pre>
