--- a/html/09_실습문제.html
+++ b/html/09_실습문제.html
@@ -21,7 +21,7 @@
     <div class="container">
         
         <h2>테마 변경</h2>
-        <button onclick="light()">밝은 모드</button>
+        <button onclick="bright()">밝은 모드</button>
         <button onclick="dark()">어두운 모드</button>
         <button onclick="pink()">분홍 모드</button>
         <button onclick="green()">초록 모드</button>
@@ -29,7 +29,7 @@
     <script>
         const div = document.querySelector("div");
 
-        function light() {
+        function bright() {
             div.style.backgroundColor="white";
             div.style.color="black";
         }
