MBTI 실습 + 토글 + 실습문제

--- a/html/08_회원가입.html
+++ b/html/08_회원가입.html
@@ -5,7 +5,7 @@
     <title>회원가입</title>
     <style>
         .container{
-            width: 40%;
+            width: 600px;
             border: 3px solid black;
             border-radius: 5px;
             margin: 0 10px;
@@ -42,6 +42,7 @@
             <li><button onclick="비밀번호일치여부()">비밀번호 일치 확인</button></li>
             <li><button onclick="이름이메일확인()">이름 이메일 값 확인</button></li>
             <li><button onclick="가입()">회원가입</button></li>
+            
 
         </div>
     </form>
