--- a/html/20_실습문제(메뉴고르기).html
+++ b/html/20_실습문제(메뉴고르기).html
@@ -3,23 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>메뉴고르기</title>
-    <style>
-        li{
-            list-style: none;
-            color: black;
-            margin: 10px;
-            padding: 10px;
-            font-weight: bold;
-            width: 400px;
-            background-color: rgb(181, 178, 178);
-            border-radius: 10px;
-            cursor: pointer;
-
-        }
-        .hidden{
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/20_메뉴고르기.css">
 </head>
 <body>
     <h1>점심 메뉴 고르기</h1>
@@ -36,37 +20,6 @@
         <h2 id="submenu-title"></h2>
         <ul id="submenu-list"></ul>
     </div>
-
-
-
-    
-
-
-    <script>
-        function showSubMenu(menu) {
-            const submenu = document.getElementById("submenu");
-            const submenuTitle = document.getElementById("submenu-title");
-            const submenuList = document.getElementById("submenu-list");
-
-            submenuTitle.textContent = menu + " 메뉴";
-            submenuList.innerHTML = ""; // 이전에 보여준 메뉴들 모두 없애고 새로보이기
-
-            // 선택한 메뉴에 따라 세부 메뉴 표시하기
-            switch (menu) {
-                case '중식':
-                    submenuList.innerHTML = "<li>짜장면</li><li>짬뽕</li><li>탕수육</li>";
-                    break;
-                case '한식':
-                    submenuList.innerHTML = "<li>비빔밥</li><li>된장찌개</li><li>불고기</li>";
-                    break;
-                case '일식':
-                    submenuList.innerHTML = "<li>초밥</li><li>라멘</li><li>돈까스</li>";
-                    break;
-                default:
-                    break;
-            }
-            submenu.classList.remove("hidden");
-        }
-    </script>
+    <script src="../js/20_메뉴고르기.js"></script>
 </body>
 </html>
