유효성검사, 숫자기록 실습문제

--- a/html/24_onkey.html
+++ b/html/24_onkey.html
@@ -14,6 +14,10 @@
         이름(영문) : <input type="text" id="영문이름" onkeyup="기능만들기()">
     </pre>
 
+    <h1>onkeypress - enter 키</h1>
+    <p>input이나 textarea에 값을 입력 후 키보드에서 한글을 제외한 모든 키를 누르면 버튼을 따로 클릭하지 않아도
+        클릭된 것처럼 작용</p>
+    <input type="text" onkeypress="엔터기능(event)">
 </body>
 <script src="../js/24_onkey-onpress.js"></script>
 </html>
