--- a/jQuery/00_jQuery개요.html
+++ b/jQuery/00_jQuery개요.html
@@ -47,6 +47,33 @@
 
         5. append() 선택 사용
             태그나 값을 추가할 때 사용
+
+        6. val() 선택 사용
+            input, textarea, select 같은 폼의 태그의 값을 가져오거나 설정하는데 사용
+            
+            - 값을 가져올 때 : $("태그명 or #id명 or .class명").val();
+                -> $("input").val();
+                -> $("#id명").val();
+                -> $(".class명").val();
+
+            - 값을 설정할 때 : $("태그명 or #id명 or .class명").val("새로운 값 설정");
+            -> $("input").val("새로운 값 설정");
+            -> $("#id명").val("새로운 값 설정");
+            -> $(".class명").val("새로운 값 설정");
+
+        7. this() 선택 사용
+            현재 실행중인 함수(태그)의 문맥을 나타냄
+            this : 이벤트가 발생한 태그를 참조
+            $("#inputField").on("input", function(){
+                console.log(this); -> 이벤트가 발생한 input태그를 바라봄
+            })
+
+        8. on() 선택 사용
+            이벤트 기능. 하나 이상의 이벤트를 처리
+            $("태그명 or #id명 or .class명").on("event", function(){
+                
+                event에 속하는 유형 : click, input, mouseover, mouseenter 등
+            })
     </pre>
 </body>
 </html>
