검색하기 실습 + 실습문제

--- a/jQuery/00_jQuery개요.html
+++ b/jQuery/00_jQuery개요.html
@@ -32,6 +32,9 @@
             $("#아이디명").기능작성();
         }
 
+        3. 다른 아이디 값에서 원하는 태그를 선택할 때 사용하는 문법
+            $("id명 태그명")
+
         [선택자문법]
         1. css 선택 사용
             $("태그명 or #id명 or .class명").css("서식");
@@ -74,6 +77,37 @@
                 
                 event에 속하는 유형 : click, input, mouseover, mouseenter 등
             })
+
+            - on에 해당하는 이벤트가 많기 때문에 on을 작성한 후
+              on("이벤트명", function(){}) 식으로 작성해야하지만 다른 속성들은 "이벤트명"을 작성하지 않아도 됨
+
+        9. keyup() 선택 사용
+            사용자가 입력창(input, textarea 등)에 키를 입력할 때마다 발생하는 이벤트를 감지
+            -> 키보드에 키가 눌릴 때마다 작용
+
+        10. each() 선택 사용
+            for문처럼 지정한 태그, class명, id명을 반복하는 기능
+            $(li).each(function(){
+                li 태그에 해당하는 모든 값을 가져와서 반복적으로 수행하고자하는 기능을 실행
+            })
+
+        11. indexOf() 선택 사용
+            - 문자열 또는 문자에서 ()안에 작성한 것와 일치하는 첫 번째 요소의 인덱스를 반환
+            - 찾지 못할 경우 -1 반환 -> 에러 최소화
+
+                    index     0        1
+            const 과일들 = {"사과","바나나"};
+            const 바나나찾기 = 과일들.indexOf("바나나");
+            console.log(바나나찾기); -> 출력값이 1
+
+            const 수박찾기 = 과일들.indexOf("수박찾기");
+            console.log(수박찾기); -> 출력값이 -1
+
+            indexOf를 했을 때 검색을 지웠을 때 문자열이 ""로 되면
+            -> keyup 이벤트에서 검색어가 빈 문자열이면 모든 항목을 보이도록 설정되어있음
+
+            indexOf "" (값 0) : 모든 값에 잠재적으로 저장되어있음.
+            
     </pre>
 </body>
 </html>
