--- a/jQuery/15_검색하기실습.html
+++ b/jQuery/15_검색하기실습.html
@@ -15,6 +15,8 @@
                 $("li").each(function(){
 
                     var 아이템 = $(this).text();
+                    console.log("**********************");
+                    console.log(아이템);
 
                     if(아이템.indexOf(검색박스) === -1){
 
@@ -71,13 +73,7 @@
             body{
                 background-color: aliceblue;
             }
-            button{
-                padding: 10px;
-                font-size: 16px;
-                border: none;
-                margin-bottom: 20px;
-                margin-left: 0;
-            }
+
             #검색결과{
                 display: none; /* 검색결과없음 숨기기*/
             }
@@ -87,7 +83,6 @@
     <h1>KH 옷가게</h1>
     <div class="컨테이너">
         <input type="text" id="검색박스" placeholder="찾는 옷 검색하기">
-        <button id="이동하기">검색</button>
         <ul id="옷리스트">
             <li>청바지</li>
             <li>셔츠</li>
