컴포넌트, 공간/여백 정리 + 홈페이지 만들기

--- a/bootstrap/00_내비게이션개요.html
+++ b/bootstrap/00_내비게이션개요.html
@@ -14,7 +14,7 @@
         .navbar
             - 네비게이션 바를 정의하는 기본 설정. 네비게이션 바의 기본 설정 스타일을 적용
         
-        .navbar-expan{-sm -md -lg -xl -xxl}
+        .navbar-expand{-sm -md -lg -xl -xxl}
             - 네비게이션 바가 특정 화면 크기 이상에서 확장되도록 함
             - 화면 크기가 설정된 값보다 작을 때는 햄버거메뉴(석 삼자) 아이콘으로 축소
             -sm : 작은 화면 크기 576px 이하는 햄버거 메뉴 아이콘 보임
