--- a/bootstrap/03_이미지갤러리.html
+++ b/bootstrap/03_이미지갤러리.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <title>이미지갤러리</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <style>
+        .footer{
+            background-color: #007bff;
+            color:white;
+            padding: 1rem 0;/*16px*/
+            position: relative;
+            width: 100%;
+            bottom: 0;
+        }
+        .footer a{
+            color:white;
+            text-decoration: none;
+        }
+        .footer a:hover{
+            text-decoration: underline;/*마우스를 a태그 위에 올리면 밑줄*/
+        }
+    </style>
 </head>
+
 <body>
-    <!-- 네비게이션 바 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <a href="#" class="navbar-brand">브랜드명/위치</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span><!--네비게이션 아이콘 위치-->
@@ -15,42 +32,82 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="02_홈페이지.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">게시판</a>
+                    <a href="04_게시판.html" class="nav-link">게시판</a>
                 </li>
                 <li class="nav-item">
-                    <a href="이미지갤러리.html" class="nav-link">이미지 갤러리</a>
+                    <a href="#" class="nav-link">이미지 갤러리</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <!-- 컨테이너 div 시작하는 곳 -->
+
     <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <img src="딸기.jpg" class="img-fluid">      
+        <div class="row mt-5">
+            <h1>이미지 갤러리</h1>
+        </div>
+        <!-- 첫 번째 가로줄 : 힐링이 소개 -->
+        <div class="row mt-5">
+            <div class="col-4">
+                <img src="healing.jpg" class="img-fluid img-thumbnail">
             </div>
-            <div class="col-6">
-                <img src="딸기.jpg" class="img-thumbnail">      
+            <div class="col-8">
+                <h3>힐링이</h3>
+                <p>
+                    츄르 좋아함<br>
+                </p>
             </div>
         </div>
-        <br>
-        <div class="row">
+        <!-- 두 번째 가로줄 : 호감이 소개 -->
+        <div class="row mt-5">
+            
             <div class="col-4">
-                <img src="healing.jpg" class="img-fluid rounded">
+                <h3>호감이</h3>
+                <p>
+                    래브라도 리트리버<br>
+                    물을 싫어함
+                </p>
             </div>
+            <div class="col-4"></div>
             <div class="col-4">
-                <img src="healing.jpg" class="img-fluid rounded-circle">
+                <img src="hogam.jpg" class="img-fluid rounded">
             </div>
-            <div class="col-4">
-                <img src="pig.jpg" class="img-fluid rounded-pill">
+            
+        </div>
+        <!-- 세 번째 가로줄 : 말리 소개 -->
+        <div class="row mt-5">
+            <div class="col-2">
+                <img src="marley.jpg" class="img-fluid rounded-circle">
+
+            </div>
+            <div class="col-2">
+                <h3>말리</h3>
+                <p>
+                    5월 23일 생일<br>
+                    산책을 좋아함
+                </p>
+            </div>
+            <div class="col-2">
+                <img src="../../css-html/html/이미지들/lovelyMarley.jpg" class="img-fluid rounded-pill">
+            </div>
+            <div class="col-2">
+                <img src="../../css-html/html/이미지들/pajamaMarley.jpg" class="img-fluid rounded-circle">
+            </div>
+            <div class="col-2">
+                <img src="../../css-html/html/이미지들/swimmingPartyMarley.jpg" class="img-fluid rounded">
             </div>
         </div>
-
-
     </div>
+    <footer class="footer mt-5">
+        <div class="container text-center">
+            <p>&copy; 2024 브랜드명. All Rights Reserved.</p>
+            <p>
+                <a href="#">개인정보처리방침</a> | <a href="#">이용약관</a>
+            </p>
+        </div>
+    </footer>
 </body>
 <script src="bootstrap.bundle.min.js"></script>
 </html>
