실습문제 + 자잘한 오타 수정

--- a/bootstrap/03_이미지갤러리.html
+++ b/bootstrap/03_이미지갤러리.html
@@ -25,7 +25,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a href="#" class="navbar-brand">브랜드명/위치</a>
+        <a href="#" class="navbar-brand">커뮤니티</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span><!--네비게이션 아이콘 위치-->
         </button>
@@ -51,7 +51,7 @@
         <!-- 첫 번째 가로줄 : 힐링이 소개 -->
         <div class="row mt-5">
             <div class="col-4">
-                <img src="healing.jpg" class="img-fluid img-thumbnail">
+                <img src="이미지들/healing.jpg" class="img-fluid img-thumbnail">
             </div>
             <div class="col-8">
                 <h3>힐링이</h3>
@@ -72,14 +72,14 @@
             </div>
             <div class="col-4"></div>
             <div class="col-4">
-                <img src="hogam.jpg" class="img-fluid rounded">
+                <img src="이미지들/hogam.jpg" class="img-fluid rounded">
             </div>
             
         </div>
         <!-- 세 번째 가로줄 : 말리 소개 -->
         <div class="row mt-5">
             <div class="col-2">
-                <img src="marley.jpg" class="img-fluid rounded-circle">
+                <img src="이미지들/marley.jpg" class="img-fluid rounded-circle">
 
             </div>
             <div class="col-2">
