--- a/bootstrap/05_글작성하기.html
+++ b/bootstrap/05_글작성하기.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a href="#" class="navbar-brand">브랜드명/위치</a>
+        <a href="#" class="navbar-brand">커뮤니티</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span><!--네비게이션 아이콘 위치-->
         </button>
