--- a/bootstrap/00_부트스트랩개요.html
+++ b/bootstrap/00_부트스트랩개요.html
@@ -18,10 +18,14 @@
         사용 방법(둘 다 필수로 사용해야함)
 
         - 부트스트랩 css 적용하기
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous">
 
         - 부트스트랩 js 적용하기
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+        crossorigin="anonymous"></script>
 
         integrity : 
             - 링크를 안전하게 가져오기 위해 설정하는 속성
@@ -45,7 +49,7 @@
     <pre>
         container
             - 반응형 고정 폭을 제공하는 역할
-            - 페이지 콘텐츠를 정려라고 중앙에 배치
+            - 페이지 콘텐츠를 정렬하고 중앙에 배치
             - 기본적으로 페이지의 양 옆에 여백을 줘서 콘텐츠를 중앙에 정렬
 
         row
