--- a/bootstrap/02_홈페이지.html
+++ b/bootstrap/02_홈페이지.html
@@ -14,12 +14,27 @@
             */
             height: 200px;
         }
+        .footer{
+            background-color: #007bff;
+            color:white;
+            padding: 1rem 0;/*16px*/
+            position: relative;
+            width: 100%;
+            bottom: 0;
+        }
+        .footer a{
+            color:white;
+            text-decoration: none;
+        }
+        .footer a:hover{
+            text-decoration: underline;/*마우스를 a태그 위에 올리면 밑줄*/
+        }
     </style>
 </head>
 <body>
     <!--네비게이션 바-->
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a href="#" class="navbar-brand">브랜드명/위치</a>
+        <a href="#" class="navbar-brand">커뮤니티</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span><!--네비게이션 아이콘 위치-->
         </button>
@@ -46,7 +61,7 @@
                 <div class="card text-bg-warning">
                     <div class="card-header">Header</div>
                     <div class="card-body">
-                        <img src="딸기.jpg" class="card-img-top">
+                        <img src="이미지들/딸기.jpg" class="card-img-top">
                         <h5 class="card-title">카드타이틀</h5>
                         <p class="card-text">
                             딸기 컷
@@ -58,7 +73,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="딸기.jpg" class="card-img-top">
+                        <img src="이미지들/딸기.jpg" class="card-img-top">
                         <h5 class="card-title">카드타이틀</h5>
                         <p class="card-text">
                             딸기 컷
@@ -70,7 +85,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="딸기.jpg" class="card-img-top">
+                        <img src="이미지들/딸기.jpg" class="card-img-top">
                         <h5 class="card-title">카드타이틀</h5>
                         <p class="card-text">
                             딸기 컷
@@ -85,7 +100,7 @@
             <div class="col-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="healing.jpg" class="card-img-top" style="margin: 20px 0;">
+                        <img src="이미지들/healing.jpg" class="card-img-top" style="margin: 20px 0;">
                         <h5 class="card-title">힐링</h5>
                         <p class="card-text">힐링이는 귀엽다</p>
                         <a href="#" class="btn btn-outline-primary">더보기</a>
@@ -95,7 +110,7 @@
             <div class="col-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="hogam.jpg" class="card-img-top" style="margin: 20px 0;">
+                        <img src="이미지들/hogam.jpg" class="card-img-top" style="margin: 20px 0;">
                         <h5 class="card-title">호감</h5>
                         <p class="card-text">호감이는 귀엽다</p>
                         <a href="#" class="btn btn-outline-primary">더보기</a>
@@ -105,7 +120,7 @@
             <div class="col-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="marley.jpg" class="card-img-top" style="margin: 20px 0;">
+                        <img src="이미지들/marley.jpg" class="card-img-top" style="margin: 20px 0;">
                         <h5 class="card-title">말리</h5>
                         <p class="card-text">말리는 귀엽다</p>
                         <a href="#" class="btn btn-outline-primary">더보기</a>
@@ -114,7 +129,14 @@
             </div>           
         </div>
     </div>
-
+    <footer class="footer mt-5">
+        <div class="container text-center">
+            <p>&copy; 2024 브랜드명. All Rights Reserved.</p>
+            <p>
+                <a href="#">개인정보처리방침</a> | <a href="#">이용약관</a>
+            </p>
+        </div>
+    </footer>
     <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
