--- a/bootstrap/04_게시판.html
+++ b/bootstrap/04_게시판.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a href="#" class="navbar-brand">브랜드명/위치</a>
+        <a href="#" class="navbar-brand">커뮤니티</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span><!--네비게이션 아이콘 위치-->
         </button>
@@ -82,11 +82,6 @@
             </tbody>
         </table>
     </div>
-
-
-
-
-
     <footer class="footer mt-5">
         <div class="container text-center">
             <p>&copy; 2024 브랜드명. All Rights Reserved.</p>
