쇼핑몰 메인 + 상세 실습

--- a/bootstrap/00_공간,여백관련개요.html
+++ b/bootstrap/00_공간,여백관련개요.html
@@ -29,6 +29,7 @@
             mx- : 태그의 왼쪽, 오른쪽 여백을 설정
             my- : 태그의 위쪽, 아래쪽 여백을 설정
             m- : 태그의 모든방향 여백을 설정
+            ms : (margin-start)왼쪽에 공간을 최대한 많이 제공하고, 오른쪽으로 정렬
     </pre>
     <h1>숫자값</h1>
     <pre>
