--- a/bootstrap/06_실습문제(옷 상세정보).html
+++ b/bootstrap/06_실습문제(옷 상세정보).html
@@ -24,26 +24,25 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">옷 판매 사이트</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span><!--네비게이션 아이콘 위치-->
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav ">
-                <li class="nav-item active">
-                    <a href="#" class="nav-link ">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Shop</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link ">Cart <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-0-square" viewBox="0 0 16 16">
-                        <path d="M7.988 12.158c-1.851 0-2.941-1.57-2.941-3.99V7.84c0-2.408 1.101-3.996 2.965-3.996 1.857 0 2.935 1.57 2.935 3.996v.328c0 2.408-1.101 3.99-2.959 3.99M8 4.951c-1.008 0-1.629 1.09-1.629 2.895v.31c0 1.81.627 2.895 1.629 2.895s1.623-1.09 1.623-2.895v-.31c0-1.8-.621-2.895-1.623-2.895"/>
-                        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
-                      </svg>        </a>
-         
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">옷 판매 사이트</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span><!--석 삼(三)자 모양의 아이콘 생성-->
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ">
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link ">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Cart <span class="badge bg-secondary">0</span></a>
+            
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="container my-5">
@@ -62,14 +61,7 @@
                 <a href="06_실습문제(옷가게).html" class="btn btn-dark">돌아가기</a>
             </div>
         </div>
-
     </div>
-
-
-
-
-
-
     <footer class="footer">
         <div class="container text-center">
             <p>&copy; 2024 브랜드명. All Rights Reserved.</p>
