Cannot read properties of undefined (reading '0') 해결

--- a/bootstrap/06_실습문제(옷 상세정보).html
+++ b/bootstrap/06_실습문제(옷 상세정보).html
@@ -9,7 +9,7 @@
             background-color: black;
             color:white;
             padding: 0.5rem 0;/*16px*/
-            position: relative;
+            position: absolute;
             width: 100%;
             bottom: 0;
         }
