--- a/bootstrap/07_사진올리기.html
+++ b/bootstrap/07_사진올리기.html
@@ -13,7 +13,23 @@
             <div class="mb-3">
                 <label class="form-label">사진 제목</label>
                 <input type="file" class="form-control" id ="이미지가져오기" accept="image/*">
-                <!-- accept="image/*" : 이미지 파일만 받음-->
+                <!-- 
+                
+                accept="image/*" : 이미지 파일만 받음
+                accept : 선택한 파일만 가져올 수 있음.
+                    image : 이미지에 해당하는 파일만 가져올 수 있음
+                    " * " : 모두 가능 // jpg, png, bmp, gif 등 
+
+                    만약 gif만 가능하게 하고 싶다면 
+                    image/gif
+
+                    만약 png, jpg, jpeg만 가능하게 하고 싶다면
+                    image/jpg, image/png, image/jpeg
+
+                    만약 비디오 중에 mp4 파일과 오디오 파일중 mp3파일만 가능하게 하고 싶다면
+                    accept=".mp4, .mp3" 또는 accept="*.mp4, *.mp3"
+                
+                -->
             </div>
             <div class="mb-3">
                 <!-- input 에서 가져온 이미지를 img 태그에서 보여주기 -->
