--- a/bootstrap/00_프로그래스바개요.html
+++ b/bootstrap/00_프로그래스바개요.html
@@ -49,9 +49,9 @@
                 }
                 else{
                     진행상황++;
-                    프로그래스바.css('width', 진행상황 + "%");
-                    프로그래스바.attr("aria-valuenow", 진행상황);
-                    프로그래스바.text(진행상황 + "%");
+                    프로그래스바.css('width', 진행상황 + "%"); //style에서 width값 변경
+                    프로그래스바.attr("aria-valuenow", 진행상황); //속성값 중에서 now만 변경
+                    프로그래스바.text(진행상황 + "%");// text 변경된 글자를 보여줌
                 }
             }, 100)
         }
