--- a/bootstrap/09_이미지 for문으로가져오기.html
+++ b/bootstrap/09_이미지 for문으로가져오기.html
@@ -5,9 +5,14 @@
     <title>이미지 여러장 for문으로 가져오기</title>
     <script src="../jQuery/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <style>
+        img{
+            width: 100px;
+        }
+    </style>
 </head>
-<body>
-    <h2>사진 업로드</h2>
+<body class="p-5">
+    <h2>사진 다중 업로드</h2>
     <label>사진선택</label>
     <input type="file" id="setImage" accept="image/*" multiple>
     <!--input에서 가져온 이미지를 미리보기로 보여줌-->
