--- a/jQuery/00_attr(속성)개요.html
+++ b/jQuery/00_attr(속성)개요.html
@@ -10,6 +10,19 @@
         attr(attribute) 속성
         jQuery에서 HTML 태그 속성을 가져오거나 설정할 때 사용되는 기능
 
+        jQuery를 사용하지 않을 때 속성 사용방법
+        getAttribute = 속성 정보 가져오기
+        getAttribute('원하는속성선택');
+
+        setAttribute = 속성 정보 변경하기
+        setAttribute('원하는속성선택', '변경할값작성');
+
+        jQuery를 사용했을 때 속성 사용방법
+        attr만 작성하면 구분x
+
+        attr('원하는속성선택');
+        attr('원하는속성선택', '변경할값작성');
+
         (ex)
         <img src="그림주소값" alt="그림설명" style="그림서식;" class="그림클래스지정">
         src, alt, style, class -> 모두 attr(속성)에 해당함
